src/objects/ConstantsH__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Acc_and_Contact_owner__c</fullName>
        <defaultValue>&apos;A&amp;N Media&apos;</defaultValue>
        <label>Acc and Contact owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsManager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsManager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Auto_Follow_Stages__c</fullName>
        <inlineHelpText>comma separated list of Opportunity stages valid for Auto-Follow rules [Gl-38]</inlineHelpText>
        <label>Opportunity Auto Follow Stages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Auto_Follow_Threshold__c</fullName>
        <description>IMPORTANT: do NOT make this field of type Currency. It causes SFDC to throw: &quot;Internal Salesforce Error: 54908659-2463 (-2030433787) (-2030433787) stack null&quot;</description>
        <inlineHelpText>Opportunity Amount thresholds for Auto-Follow logic</inlineHelpText>
        <label>Opportunity Auto Follow Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <label>Price Book</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quick_Pitch_Icons_Per_Line__c</fullName>
        <description>number of product icons per line on Page 2 of Opportunity create via Chatter function</description>
        <inlineHelpText>number of product icons per line on Page 2 of Opportunity create via Chatter function</inlineHelpText>
        <label>Quick Pitch - Icons Per Line</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ConstantsH</label>
</CustomObject>